Prevent content from being hidden on mobile for old sass widgets

--- a/src/assets/toolkit/styles/8-trumps/_trumps.bridge-widgets.scss
+++ b/src/assets/toolkit/styles/8-trumps/_trumps.bridge-widgets.scss
@@ -1138,6 +1138,12 @@ Manually added CSS to fix conflicting CSS rules between vic-ui-kit and sass-brid
     /* Add some spacing above the widget headers */
     margin-top: 1rem !important;
   }
+  @media all and (max-width: 759px) {
+    .toggle_block {
+      /* Prevent content from being hidden on mobile */
+      display: block;
+    }
+  }
 }
 
 aside > .formatting .old-sass-widget h2::before {
